--- a/demo/root.html
+++ b/demo/root.html
@@ -6,11 +6,11 @@
 	<title>react-demo</title>
 	<link rel="stylesheet" href="">
 	<script src="http://fb.me/react-0.12.2.js"></script>
+	<script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
 </head>
 <body>
 	<div id="root">
-		
 	</div>
-	<script src="hello-world.js"></script>
+	<script src="hello-world.js" type="text/jsx"></script>
 </body>
 </html>
